[project]
name = "pastebin-lite"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
    "jinja2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
